# bazel-go

./: README.md
v1.16/: BUILD.bazel  WORKSPACE  go.mod  mathlib.c  test-app-debug  test-app-race
v1.21/: MODULE.bazel  WORKSPACE  go.mod  main.go  mathlib.h  test-app
